2009-11-06  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for 'Bug 553101 – Enum completion does not use
	  type aliases'.

2009-10-28  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for 'Bug 550185 - Intellisence for extension
	  methods'.

2009-10-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
	  test for 'Bug 549858 - Refactoring does not change
	  properties in lambda expressions'.

2009-10-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added
	  unit test for 'Bug 549864 - Intellisense does not work
	  properly with expressions'.

2009-10-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/DeclareLocalTests.cs: Updated unit
	  test to the new naming sheme.

2009-10-20  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs: Added
	  test for 'Bug 547949 - Rename partial classes does not
	  rename both classes'.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/TestViewContent.cs: Track API
	  changes.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/DeclareLocalTests.cs: Updated
	  declare local test.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Projects/MSBuildTests.cs:
	* MonoDevelop.CSharpBinding/MemberTests.cs:
	* MonoDevelop.CSharpBinding/TopLevelTests.cs:
	* MonoDevelop.Projects/TestProjectsChecks.cs:
	* MonoDevelop.CSharpBinding/ProjectDomTests.cs:
	* MonoDevelop.Refactoring/ExtractMethodTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/FindMemberVisitorTests.cs:
	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs:
	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs: